Fix Web Showcase spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -871,6 +871,7 @@
 }
 
 .web-showcase {
+	padding: 6vh 0 4vh 0;
 	-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29) !important;
 	background-color: #FFFFFF !important;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.29) !important;
